--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
+  "name": "todosome-main",
+  "version": "1.0.0",
+  "description": "",
+  "homepage": "https://github.com/MANE4L/todosome-main#readme",
+  "bugs": {
+    "url": "https://github.com/MANE4L/todosome-main/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MANE4L/todosome-main.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1"
-  }
+  },
+  "devDependencies": {}
 }
